--- a/IRIS_IDataMain/IRIS_IDataMain.csproj
+++ b/IRIS_IDataMain/IRIS_IDataMain.csproj
@@ -290,13 +290,13 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>53792</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:53792/</IISUrl>
+          <IISUrl>http://localhost:55555/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
           </CustomServerUrl>
           <SaveServerSettingsInUserFile>False</SaveServerSettingsInUserFile>
-          <servers defaultServer="SelfHostServer">
+          <servers defaultServer="">
             <server name="SelfHostServer" exePath="" cmdArgs="" url="http://localhost:53792/" workingDir="" />
           </servers>
         </WebProjectProperties>
