--- a/IRIS_IDataMain/Web.config
+++ b/IRIS_IDataMain/Web.config
@@ -5,6 +5,7 @@
   -->
 <configuration>
   <appSettings>
+    <add key="LogPath" value="C:/inetpub/wwwroot/IRISIDATAWeb/Logs"/>
     <add key="webpages:Version" value="3.0.0.0"/>
     <add key="webpages:Enabled" value="false"/>
     <add key="ClientValidationEnabled" value="true"/>
@@ -30,7 +31,6 @@
       <remove name="TRACEVerbHandler"/>
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0"/>
     </handlers>
-	 
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
